--- a/[OLC]Proyecto1_202004734/nbproject/project.properties
+++ b/[OLC]Proyecto1_202004734/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/_OLC_Proyecto1_202004734.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=src\\Analizadores\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=src\\Analizadores\\java-cup-11b.jar
+file.reference.jflex-full-1.7.0.jar=src\\Analizadores\\jflex-full-1.7.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.jflex-full-1.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
